repos/emily-python/contents/test/parser/fail/emptyComma.em
# Test double comma in apply

# Arg: --ast2
# Expect failure

a (3,,4)
